--- a/InsertionSort.ipynb
+++ b/InsertionSort.ipynb
@@ -6,7 +6,7 @@
       "name": "InsertionSort.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNTwdlDY/3g+PHv22/v05CA",
+      "authorship_tag": "ABX9TyM2YPSKaR9ljeA2NaNPcfTD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,6 +44,25 @@
       },
       "source": [
         "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GKGw0a9zerSk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def plot_bar(arr):\n",
+        "    x = []\n",
+        "    y = arr\n",
+        "    for i in arr:\n",
+        "      x.append(str(i))\n",
+        "    plt.bar(x,y)\n",
+        "    plt.show()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -146,7 +165,7 @@
       "metadata": {
         "id": "3b0fDWHZhs09",
         "colab_type": "code",
-        "outputId": "0124b399-ae91-4c61-93ad-a49c9334cb72",
+        "outputId": "529af7b0-99d6-4971-a13a-7dea7110ba67",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -157,7 +176,7 @@
         "genlist = genlist[::-1]\n",
         "genlist"
       ],
-      "execution_count": 322,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +188,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 322
+          "execution_count": 14
         }
       ]
     },
@@ -188,16 +207,16 @@
       "metadata": {
         "id": "-8WUHLiPQj_K",
         "colab_type": "code",
+        "outputId": "cf24e703-61ff-4f03-cffe-4816a5bf2ad1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "cc51c17a-3720-43c6-cf59-82a84697369e"
+        }
       },
       "source": [
         "plot_bar(genlist)"
       ],
-      "execution_count": 323,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
@@ -228,7 +247,7 @@
       "metadata": {
         "id": "WzYFLERIlsCz",
         "colab_type": "code",
-        "outputId": "97f51272-eee1-48d2-a122-a92ad5d71138",
+        "outputId": "059d0884-55d5-425b-87b6-f0d475ec1223",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -238,7 +257,7 @@
         "sort(genlist)\n",
         "genlist"
       ],
-      "execution_count": 324,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -440,7 +459,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 324
+          "execution_count": 16
         }
       ]
     },
@@ -498,11 +517,11 @@
       "metadata": {
         "id": "MexZISV0Imbd",
         "colab_type": "code",
+        "outputId": "320c0018-b558-4d95-f4d5-91538dc0d08f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "44b57409-8ef4-435a-af2b-bada2ff6849b"
+        }
       },
       "source": [
         "genlist = [*range(20)]\n",
@@ -512,7 +531,7 @@
         "insertion.sort(genlist)\n",
         "genlist"
       ],
-      "execution_count": 326,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -892,7 +911,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 326
+          "execution_count": 18
         }
       ]
     }
