--- a/MergeSort_Inplace.ipynb
+++ b/MergeSort_Inplace.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MergeSort-Inplace.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOF0LegJfY2sOi4cCcw/yIt",
+      "authorship_tag": "ABX9TyNJg2vJ7ap1lnvaKGREgfGz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,6 +74,7 @@
       },
       "source": [
         "def sorted(a):\n",
+        "  plot_bar(a)\n",
         "  aux = np.empty(len(desc))\n",
         "  lo = 0\n",
         "  hi = len(desc)-1\n",
@@ -170,13 +171,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 50
         },
-        "outputId": "5917bf81-e8e1-4e8a-aebb-de133b96974b"
+        "outputId": "7a622114-088c-411a-9157-753075b4e8bf"
       },
       "source": [
         "desc = np.arange(25,0,-1)\n",
         "desc"
       ],
-      "execution_count": 214,
+      "execution_count": 230,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -189,7 +190,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 214
+          "execution_count": 230
         }
       ]
     },
@@ -215,13 +216,25 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "6047dca7-4ccb-45aa-e023-231e3242ddcf"
+        "outputId": "1afc6be3-1b0d-45bc-9543-e597297379b5"
       },
       "source": [
         "sorted(desc)"
       ],
-      "execution_count": 215,
+      "execution_count": 231,
       "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAEWCAYAAABhffzLAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAASSElEQVR4nO3dfawldX3H8fdHwEdQQS4IyHURkbqt\nKdiVYjS6PmCBBhE1xK0RrJg1rRhREkWbKqnV4gM+JZR2DQgoYkgFxacqVXxMlQISeQYfFgWX3SJa\nwCcEvv3jzOrhcu/du5edc/ae3/uV3NxzZubMfOdO9rO/85vfzKSqkCS140HjLkCSNFoGvyQ1xuCX\npMYY/JLUGINfkhpj8EtSYwx+SWqMwa8lLcnaJHcl2XnG9O8lqSTLxlPZfWp5cJKTk9yU5M6u5g8+\ngPWdkeSft2SNaovBr0nwY2DVxjdJngI8fLErS7LtlihqyFuAFcABwA7ASuCyxawoyTZbriy1yuDX\nJPgYcNTQ+6OBs4YXSPKQJO9L8pMk65P8W5KHdfNWdq3xNye5BfhoN/1NSdYl+VmSV3ffIJ64qfXN\n4mnA+VX1sxpYW1V/qC/Jk5N8Lckvk1yV5IVD885IcmqSLyT5FXAM8HLgTd23h88+4L+emmPwaxJ8\nB3hkF6DbAC8DPj5jmZOAJwH7AU8E9gDeNjT/scBOwOOB1UkOBt4IPL9bfuVmrm9mfW9M8vdJnpIk\nG2ck2Q74LPBlYBfgdcDZSfYd+vzfAO9k8G3hLOBs4D1VtX1VHTbP30WalcGvSbGx1X8QcA1w88YZ\nXdCuBt5QVbdV1R3Auxj8B7HRvcDbq+p3VfUb4Ejgo1V1VVX9GjhxM9c37F+AdzNoqV8C3Jzk6G7e\ngcD2wElVdVdVfRX4HENdV8BnqurbVXVvVf12s/8y0gxbui9TGpePAd8A9mJGNw8wxaDP/9LhxjYw\n3F/+vzNCdXcGIb3RTzdzfX9QVfcApwCndN1BrwJOT3Jxt52fVtW9Qx+5kcE3iNm2LT1gtvg1Earq\nRgYneQ8Fzpsx+1bgN8CfVtWju59HVdX2w6uY8Zl1wOOG3u+5meubq87fVNUpwC+A5cDPgD2TDP9b\nnGboG8sstXlLXT0gBr8myTHAc6vqV8MTu9b0R4APJNkFIMkeSf5qnnWdC/xtd97g4cA/LnZ9SY7r\nTiA/LMm2XTfPDsD3gO8Cv2Zwsna7JCuBw4BPzlPbeuAJ88yX5mXwa2JU1Q+r6pI5Zr8Z+AHwnSS3\nA/8F7DvHslTVF4EPAxdt/Fw363eLWN+vgZOBWxh8W3gt8JKq+lFV3cUg6A/p5v0rcFRVXTvPrp4G\nLO9GAX16nuWkWcUHsUibluTJwJXAQ6rq7nHXIz0QtvilOSQ5ohuvvyODUTmfNfQ1CQx+aW6vATYA\nPwTuAf5uvOVIW4ZdPZLUGFv8ktSYJXEB184771zLli0bdxmStKRceumlt1bV1MzpSyL4ly1bxiWX\nzDVKT5I0myQ3zjbdrh5JaozBL0mNMfglqTEGvyQ1xuCXpMYY/JLUmN6CP8meSS5KcnX3HNHXd9NP\nTHJzksu7n0P7qkGSdH99juO/Gzi+qi5LsgODpxVd2M37QFW9r8dtS5Lm0FvwV9U6Bk8xoqruSHIN\n932cnCRpDEZy5W6SZcD+DJ429Azg2CRHMXim6fFV9YtZPrOawQOtmZ6eXvS2l53w+QUtt/akv170\nNiRpKen95G6S7YFPAcdV1e3AqcDewH4MvhGcPNvnqmpNVa2oqhVTU/e71YQkaZF6Df4k2zEI/bOr\n6jyAqlpfVfcMPbf0gD5rkCTdV5+jesLg2aDXVNX7h6bvNrTYEQweZydJGpE++/ifAbwCuCLJ5d20\ntwKrkuwHFLCWwVOOJEkj0ueonm8BmWXWF/rapiRp07xyV5IaY/BLUmOWxBO4Rslx/5ImnS1+SWqM\nwS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5Ia4zj+LcCx/5KWElv8ktQYg1+SGmPwS1JjDH5JaozB\nL0mNMfglqTEGvyQ1xuCXpMZ4AdcYeMGXpHGyxS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5IaY/BL\nUmMcx78EOO5f0pZki1+SGmPwS1JjDH5JaozBL0mN6S34k+yZ5KIkVye5Ksnru+k7JbkwyQ3d7x37\nqkGSdH99tvjvBo6vquXAgcBrkywHTgC+UlX7AF/p3kuSRqS34K+qdVV1Wff6DuAaYA/gcODMbrEz\ngRf1VYMk6f5GMo4/yTJgf+C7wK5Vta6bdQuw6xyfWQ2sBpienu6/yAmzkLH/jvuX2tT7yd0k2wOf\nAo6rqtuH51VVATXb56pqTVWtqKoVU1NTfZcpSc3oNfiTbMcg9M+uqvO6yeuT7NbN3w3Y0GcNkqT7\n6nNUT4DTgGuq6v1Dsy4Aju5eHw18pq8aJEn312cf/zOAVwBXJLm8m/ZW4CTg3CTHADcCR/ZYgyRp\nht6Cv6q+BWSO2c/ra7uSpPl55a4kNcbgl6TGeD9+Ad7zX2qJLX5JaozBL0mNMfglqTEGvyQ1xuCX\npMYY/JLUGINfkhpj8EtSY7yAS4viBV/S0mWLX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4Jek\nxjiOXyPhuH9p62GLX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4JekxjiOX1uthYz9d9y/tPls\n8UtSYwx+SWqMwS9JjTH4JakxvQV/ktOTbEhy5dC0E5PcnOTy7ufQvrYvSZpdny3+M4CDZ5n+gara\nr/v5Qo/blyTNorfgr6pvALf1tX5J0uKMo4//2CTf77qCdhzD9iWpaaO+gOtU4B1Adb9PBl4124JJ\nVgOrAaanp0dVn5YwH/YiLcxIW/xVtb6q7qmqe4GPAAfMs+yaqlpRVSumpqZGV6QkTbiRBn+S3Ybe\nHgFcOdeykqR+9NbVk+QcYCWwc5KbgLcDK5Psx6CrZy3wmr62L0ma3SaDP8muwLuA3avqkCTLgadX\n1Wnzfa6qVs0yed7PSJL6t5CunjOALwG7d++vB47rqyBJUr8WEvw7V9W5wL0AVXU3cE+vVUmSerOQ\n4P9Vkscw6JcnyYHA//ValSSpNws5uftG4AJg7yTfBqaAl/ZalTQCjvtXqzYZ/FV1WZJnA/sCAa6r\nqt/3XpkkqRcLGdVz1IxJT01CVZ3VU02SpB4tpKvnaUOvHwo8D7gMMPglaQlaSFfP64bfJ3k08Mne\nKpIk9Woxt2z4FbDXli5EkjQaC+nj/yzdUE4G/1EsB87tsyhJUn8W0sf/vqHXdwM3VtVNPdUjSerZ\nQvr4vz6KQqStneP+NSnmDP4kd/DHLp77zAKqqh7ZW1WSpN7MGfxVtcMoC5EkjcaC78efZBcG4/gB\nqKqf9FKRJKlXmxzOmeSFSW4Afgx8ncEDVL7Yc12SpJ4sZBz/O4ADgeurai8GV+5+p9eqJEm9WUjw\n/76qfg48KMmDquoiYEXPdUmSerKQPv5fJtke+CZwdpINDK7elSQtQfMN5zwFOAc4HPgNg8ctvhx4\nFPBPI6lOWuIc+6+t0Xwt/uuB9wK7MbhFwzlVdeZIqpIk9WbOPv6q+lBVPR14NvBz4PQk1yZ5W5In\njaxCSdIWtcmTu1V1Y1W9u6r2B1YBRwDX9F6ZJKkXCxnHv22Sw5KczWD8/nXAi3uvTJLUi/lO7h7E\noIV/KHAxg4evrK4qR/RI0hI238ndtwCfAI6vql+MqB5JUs/mu0nbc0dZiCRpNBbz6EVJ0hK24Ltz\nSuqfF3xpFGzxS1JjDH5JaozBL0mNMfglqTG9BX+S05NsSHLl0LSdklyY5Ibu9459bV+SNLs+W/xn\nAAfPmHYC8JWq2gf4SvdekjRCvQV/VX0DuG3G5MOBjbd2PhN4UV/blyTNbtTj+HetqnXd61uAXeda\nMMlqYDXA9PT0CEqTlh7H/WsxxnZyt6oKqHnmr6mqFVW1YmpqaoSVSdJkG3Xwr0+yG0D3e8OIty9J\nzRt18F8AHN29Phr4zIi3L0nN63M45znAfwP7JrkpyTHAScBBSW4Ant+9lySNUG8nd6tq1RyzntfX\nNiVJm+aVu5LUGINfkhrj/filxixk7L/j/iebLX5JaozBL0mNMfglqTEGvyQ1xuCXpMYY/JLUGINf\nkhpj8EtSY7yAS9K8fNjL5LHFL0mNMfglqTEGvyQ1xuCXpMYY/JLUGINfkhpj8EtSYxzHL2mLctz/\n1s8WvyQ1xuCXpMYY/JLUGINfkhpj8EtSYwx+SWqMwS9JjXEcv6Sxctz/6Nnil6TGGPyS1BiDX5Ia\nY/BLUmPGcnI3yVrgDuAe4O6qWjGOOiSpReMc1fOcqrp1jNuXpCbZ1SNJjRlXi7+ALycp4N+ras3M\nBZKsBlYDTE9Pj7g8SVuzhYz9d9z/3MbV4n9mVT0VOAR4bZJnzVygqtZU1YqqWjE1NTX6CiVpQo0l\n+Kvq5u73BuB84IBx1CFJLRp58Cd5RJIdNr4GXgBcOeo6JKlV4+jj3xU4P8nG7X+iqv5zDHVIUpNG\nHvxV9SPgz0e9XUnSgMM5JakxBr8kNcbgl6TG+CAWSRPPh73cly1+SWqMwS9JjTH4JakxBr8kNcbg\nl6TGGPyS1BiDX5Ia4zh+SZph0sf92+KXpMYY/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxjuOX\npAdoqY37t8UvSY0x+CWpMQa/JDXG4Jekxhj8ktQYg1+SGmPwS1JjDH5JaowXcEnSGIzzoi9b/JLU\nGINfkhpj8EtSYwx+SWrMWII/ycFJrkvygyQnjKMGSWrVyIM/yTbAKcAhwHJgVZLlo65Dklo1jhb/\nAcAPqupHVXUX8Eng8DHUIUlNSlWNdoPJS4GDq+rV3ftXAH9ZVcfOWG41sLp7uy9w3RYsY2fg1i24\nvqWgxX2GNve7xX2GNvd7U/v8+Kqamjlxq72Aq6rWAGv6WHeSS6pqRR/r3lq1uM/Q5n63uM/Q5n4v\ndp/H0dVzM7Dn0PvHddMkSSMwjuD/H2CfJHsleTDwMuCCMdQhSU0aeVdPVd2d5FjgS8A2wOlVddWI\ny+ilC2kr1+I+Q5v73eI+Q5v7vah9HvnJXUnSeHnlriQ1xuCXpMY0F/wt3i4iydokVyS5PMkl466n\nL0lOT7IhyZVD03ZKcmGSG7rfO46zxi1tjn0+McnN3fG+PMmh46xxS0uyZ5KLklyd5Kokr++mT+yx\nnmefF3Wsm+rj724XcT1wEHATgxFGq6rq6rEW1rMka4EVVTXRF7ckeRZwJ3BWVf1ZN+09wG1VdVL3\nH/2OVfXmcda5Jc2xzycCd1bV+8ZZW1+S7AbsVlWXJdkBuBR4EfBKJvRYz7PPR7KIY91ai9/bRUyw\nqvoGcNuMyYcDZ3avz2Twj2VizLHPE62q1lXVZd3rO4BrgD2Y4GM9zz4vSmvBvwfw06H3N/EA/nhL\nSAFfTnJpdyuMluxaVeu617cAu46zmBE6Nsn3u66gienymCnJMmB/4Ls0cqxn7DMs4li3FvytemZV\nPZXBHVFf23UPNKcG/Zot9G2eCuwN7AesA04ebzn9SLI98CnguKq6fXjepB7rWfZ5Uce6teBv8nYR\nVXVz93sDcD6DLq9WrO/6Rzf2k24Ycz29q6r1VXVPVd0LfIQJPN5JtmMQgGdX1Xnd5Ik+1rPt82KP\ndWvB39ztIpI8ojsZRJJHAC8Arpz/UxPlAuDo7vXRwGfGWMtIbAy/zhFM2PFOEuA04Jqqev/QrIk9\n1nPt82KPdVOjegC64U4f5I+3i3jnmEvqVZInMGjlw+AWHZ+Y1H1Ocg6wksGtatcDbwc+DZwLTAM3\nAkdW1cScDJ1jn1cy+OpfwFrgNUN930tekmcC3wSuAO7tJr+VQZ/3RB7refZ5FYs41s0FvyS1rrWu\nHklqnsEvSY0x+CWpMQa/JDXG4Jekxhj80pAkd27m8iuTfK6veqQ+GPyS1BiDX5pF15L/WpL/SHJt\nkrO7qyc3PtPh2iSXAS8e+swjuhtlXZzke0kO76a/Icnp3eunJLkyycPHsmMSBr80n/2B44DlwBOA\nZyR5KIN7ohwG/AXw2KHl/wH4alUdADwHeG93m4wPAU9McgTwUQZXV/56dLsh3ZfBL83t4qq6qbsB\n1uXAMuBPgB9X1Q3dHSA/PrT8C4ATklwOfA14KDDdff6VwMeAr1fVt0e3C9L9bTvuAqSt2O+GXt/D\npv+9BHhJVV03y7x9GDwpa/ctVJu0aLb4pc1zLbAsyd7d+1VD874EvG7oXMD+3e9HAR8GngU8JslL\nR1ivdD8Gv7QZquq3wGrg893J3eF7vr8D2A74fpKruvcAHwBOqarrgWOAk5LsMsKypfvw7pyS1Bhb\n/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNeb/AYh5UoFJrnFuAAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        },
         {
           "output_type": "display_data",
           "data": {
