--- a/MergeSort_Inplace.ipynb
+++ b/MergeSort_Inplace.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "MergeSort-Inplace.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNJg2vJ7ap1lnvaKGREgfGz",
+      "authorship_tag": "ABX9TyOAeAw0YjniNUWQ58qVHXWn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Suddhaswatta/Algorithm/blob/master/MergeSort_Inplace.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Suddhaswatta/Sorting-Algorithms-Visualization/blob/master/MergeSort_Inplace.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -74,7 +74,7 @@
       },
       "source": [
         "def sorted(a):\n",
-        "  plot_bar(a)\n",
+        "  plot_bar(a,\"Unsorted Array\")\n",
         "  aux = np.empty(len(desc))\n",
         "  lo = 0\n",
         "  hi = len(desc)-1\n",
@@ -102,7 +102,7 @@
         "  sort(a=a,aux=aux,lo = mid+1,hi = hi)\n",
         "  merge(a=a,aux=aux,lo=lo,hi=hi,mid=mid)\n",
         "  \n",
-        "  plot_bar(a)\n",
+        "  plot_bar(a,\"Merge Sort\")\n",
         "  "
       ],
       "execution_count": 0,
@@ -150,10 +150,10 @@
         "colab": {}
       },
       "source": [
-        "def plot_bar(arr):\n",
+        "def plot_bar(arr,title):\n",
         "  x = np.arange(len(arr))\n",
         "  y = arr\n",
-        "  plt.title(\"Merge Sort\")\n",
+        "  plt.title(title)\n",
         "  plt.xlabel(\"Index\")\n",
         "  plt.ylabel(\"Value\")\n",
         "  plt.bar(x,y)\n",
@@ -167,17 +167,17 @@
       "metadata": {
         "id": "Rz2JwObQBLZR",
         "colab_type": "code",
+        "outputId": "c13f0427-9edd-4396-d39f-a87471b73b40",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
-        },
-        "outputId": "7a622114-088c-411a-9157-753075b4e8bf"
+          "height": 51
+        }
       },
       "source": [
         "desc = np.arange(25,0,-1)\n",
         "desc"
       ],
-      "execution_count": 230,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -190,7 +190,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 230
+          "execution_count": 7
         }
       ]
     },
@@ -212,21 +212,21 @@
       "metadata": {
         "id": "61MzRpUs6Gz3",
         "colab_type": "code",
+        "outputId": "2869cf2c-89c4-4740-e66d-66552f6a4e96",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "1afc6be3-1b0d-45bc-9543-e597297379b5"
+        }
       },
       "source": [
         "sorted(desc)"
       ],
-      "execution_count": 231,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAEWCAYAAABhffzLAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAASSElEQVR4nO3dfawldX3H8fdHwEdQQS4IyHURkbqt\nKdiVYjS6PmCBBhE1xK0RrJg1rRhREkWbKqnV4gM+JZR2DQgoYkgFxacqVXxMlQISeQYfFgWX3SJa\nwCcEvv3jzOrhcu/du5edc/ae3/uV3NxzZubMfOdO9rO/85vfzKSqkCS140HjLkCSNFoGvyQ1xuCX\npMYY/JLUGINfkhpj8EtSYwx+SWqMwa8lLcnaJHcl2XnG9O8lqSTLxlPZfWp5cJKTk9yU5M6u5g8+\ngPWdkeSft2SNaovBr0nwY2DVxjdJngI8fLErS7LtlihqyFuAFcABwA7ASuCyxawoyTZbriy1yuDX\nJPgYcNTQ+6OBs4YXSPKQJO9L8pMk65P8W5KHdfNWdq3xNye5BfhoN/1NSdYl+VmSV3ffIJ64qfXN\n4mnA+VX1sxpYW1V/qC/Jk5N8Lckvk1yV5IVD885IcmqSLyT5FXAM8HLgTd23h88+4L+emmPwaxJ8\nB3hkF6DbAC8DPj5jmZOAJwH7AU8E9gDeNjT/scBOwOOB1UkOBt4IPL9bfuVmrm9mfW9M8vdJnpIk\nG2ck2Q74LPBlYBfgdcDZSfYd+vzfAO9k8G3hLOBs4D1VtX1VHTbP30WalcGvSbGx1X8QcA1w88YZ\nXdCuBt5QVbdV1R3Auxj8B7HRvcDbq+p3VfUb4Ejgo1V1VVX9GjhxM9c37F+AdzNoqV8C3Jzk6G7e\ngcD2wElVdVdVfRX4HENdV8BnqurbVXVvVf12s/8y0gxbui9TGpePAd8A9mJGNw8wxaDP/9LhxjYw\n3F/+vzNCdXcGIb3RTzdzfX9QVfcApwCndN1BrwJOT3Jxt52fVtW9Qx+5kcE3iNm2LT1gtvg1Earq\nRgYneQ8Fzpsx+1bgN8CfVtWju59HVdX2w6uY8Zl1wOOG3u+5meubq87fVNUpwC+A5cDPgD2TDP9b\nnGboG8sstXlLXT0gBr8myTHAc6vqV8MTu9b0R4APJNkFIMkeSf5qnnWdC/xtd97g4cA/LnZ9SY7r\nTiA/LMm2XTfPDsD3gO8Cv2Zwsna7JCuBw4BPzlPbeuAJ88yX5mXwa2JU1Q+r6pI5Zr8Z+AHwnSS3\nA/8F7DvHslTVF4EPAxdt/Fw363eLWN+vgZOBWxh8W3gt8JKq+lFV3cUg6A/p5v0rcFRVXTvPrp4G\nLO9GAX16nuWkWcUHsUibluTJwJXAQ6rq7nHXIz0QtvilOSQ5ohuvvyODUTmfNfQ1CQx+aW6vATYA\nPwTuAf5uvOVIW4ZdPZLUGFv8ktSYJXEB184771zLli0bdxmStKRceumlt1bV1MzpSyL4ly1bxiWX\nzDVKT5I0myQ3zjbdrh5JaozBL0mNMfglqTEGvyQ1xuCXpMYY/JLUmN6CP8meSS5KcnX3HNHXd9NP\nTHJzksu7n0P7qkGSdH99juO/Gzi+qi5LsgODpxVd2M37QFW9r8dtS5Lm0FvwV9U6Bk8xoqruSHIN\n932cnCRpDEZy5W6SZcD+DJ429Azg2CRHMXim6fFV9YtZPrOawQOtmZ6eXvS2l53w+QUtt/akv170\nNiRpKen95G6S7YFPAcdV1e3AqcDewH4MvhGcPNvnqmpNVa2oqhVTU/e71YQkaZF6Df4k2zEI/bOr\n6jyAqlpfVfcMPbf0gD5rkCTdV5+jesLg2aDXVNX7h6bvNrTYEQweZydJGpE++/ifAbwCuCLJ5d20\ntwKrkuwHFLCWwVOOJEkj0ueonm8BmWXWF/rapiRp07xyV5IaY/BLUmOWxBO4Rslx/5ImnS1+SWqM\nwS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5Ia4zj+LcCx/5KWElv8ktQYg1+SGmPwS1JjDH5JaozB\nL0mNMfglqTEGvyQ1xuCXpMZ4AdcYeMGXpHGyxS9JjTH4JakxBr8kNcbgl6TGGPyS1BiDX5IaY/BL\nUmMcx78EOO5f0pZki1+SGmPwS1JjDH5JaozBL0mN6S34k+yZ5KIkVye5Ksnru+k7JbkwyQ3d7x37\nqkGSdH99tvjvBo6vquXAgcBrkywHTgC+UlX7AF/p3kuSRqS34K+qdVV1Wff6DuAaYA/gcODMbrEz\ngRf1VYMk6f5GMo4/yTJgf+C7wK5Vta6bdQuw6xyfWQ2sBpienu6/yAmzkLH/jvuX2tT7yd0k2wOf\nAo6rqtuH51VVATXb56pqTVWtqKoVU1NTfZcpSc3oNfiTbMcg9M+uqvO6yeuT7NbN3w3Y0GcNkqT7\n6nNUT4DTgGuq6v1Dsy4Aju5eHw18pq8aJEn312cf/zOAVwBXJLm8m/ZW4CTg3CTHADcCR/ZYgyRp\nht6Cv6q+BWSO2c/ra7uSpPl55a4kNcbgl6TGeD9+Ad7zX2qJLX5JaozBL0mNMfglqTEGvyQ1xuCX\npMYY/JLUGINfkhpj8EtSY7yAS4viBV/S0mWLX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4Jek\nxjiOXyPhuH9p62GLX5IaY/BLUmMMfklqjMEvSY0x+CWpMQa/JDXG4JekxjiOX1uthYz9d9y/tPls\n8UtSYwx+SWqMwS9JjTH4JakxvQV/ktOTbEhy5dC0E5PcnOTy7ufQvrYvSZpdny3+M4CDZ5n+gara\nr/v5Qo/blyTNorfgr6pvALf1tX5J0uKMo4//2CTf77qCdhzD9iWpaaO+gOtU4B1Adb9PBl4124JJ\nVgOrAaanp0dVn5YwH/YiLcxIW/xVtb6q7qmqe4GPAAfMs+yaqlpRVSumpqZGV6QkTbiRBn+S3Ybe\nHgFcOdeykqR+9NbVk+QcYCWwc5KbgLcDK5Psx6CrZy3wmr62L0ma3SaDP8muwLuA3avqkCTLgadX\n1Wnzfa6qVs0yed7PSJL6t5CunjOALwG7d++vB47rqyBJUr8WEvw7V9W5wL0AVXU3cE+vVUmSerOQ\n4P9Vkscw6JcnyYHA//ValSSpNws5uftG4AJg7yTfBqaAl/ZalTQCjvtXqzYZ/FV1WZJnA/sCAa6r\nqt/3XpkkqRcLGdVz1IxJT01CVZ3VU02SpB4tpKvnaUOvHwo8D7gMMPglaQlaSFfP64bfJ3k08Mne\nKpIk9Woxt2z4FbDXli5EkjQaC+nj/yzdUE4G/1EsB87tsyhJUn8W0sf/vqHXdwM3VtVNPdUjSerZ\nQvr4vz6KQqStneP+NSnmDP4kd/DHLp77zAKqqh7ZW1WSpN7MGfxVtcMoC5EkjcaC78efZBcG4/gB\nqKqf9FKRJKlXmxzOmeSFSW4Afgx8ncEDVL7Yc12SpJ4sZBz/O4ADgeurai8GV+5+p9eqJEm9WUjw\n/76qfg48KMmDquoiYEXPdUmSerKQPv5fJtke+CZwdpINDK7elSQtQfMN5zwFOAc4HPgNg8ctvhx4\nFPBPI6lOWuIc+6+t0Xwt/uuB9wK7MbhFwzlVdeZIqpIk9WbOPv6q+lBVPR14NvBz4PQk1yZ5W5In\njaxCSdIWtcmTu1V1Y1W9u6r2B1YBRwDX9F6ZJKkXCxnHv22Sw5KczWD8/nXAi3uvTJLUi/lO7h7E\noIV/KHAxg4evrK4qR/RI0hI238ndtwCfAI6vql+MqB5JUs/mu0nbc0dZiCRpNBbz6EVJ0hK24Ltz\nSuqfF3xpFGzxS1JjDH5JaozBL0mNMfglqTG9BX+S05NsSHLl0LSdklyY5Ibu9459bV+SNLs+W/xn\nAAfPmHYC8JWq2gf4SvdekjRCvQV/VX0DuG3G5MOBjbd2PhN4UV/blyTNbtTj+HetqnXd61uAXeda\nMMlqYDXA9PT0CEqTlh7H/WsxxnZyt6oKqHnmr6mqFVW1YmpqaoSVSdJkG3Xwr0+yG0D3e8OIty9J\nzRt18F8AHN29Phr4zIi3L0nN63M45znAfwP7JrkpyTHAScBBSW4Ant+9lySNUG8nd6tq1RyzntfX\nNiVJm+aVu5LUGINfkhrj/filxixk7L/j/iebLX5JaozBL0mNMfglqTEGvyQ1xuCXpMYY/JLUGINf\nkhpj8EtSY7yAS9K8fNjL5LHFL0mNMfglqTEGvyQ1xuCXpMYY/JLUGINfkhpj8EtSYxzHL2mLctz/\n1s8WvyQ1xuCXpMYY/JLUGINfkhpj8EtSYwx+SWqMwS9JjXEcv6Sxctz/6Nnil6TGGPyS1BiDX5Ia\nY/BLUmPGcnI3yVrgDuAe4O6qWjGOOiSpReMc1fOcqrp1jNuXpCbZ1SNJjRlXi7+ALycp4N+ras3M\nBZKsBlYDTE9Pj7g8SVuzhYz9d9z/3MbV4n9mVT0VOAR4bZJnzVygqtZU1YqqWjE1NTX6CiVpQo0l\n+Kvq5u73BuB84IBx1CFJLRp58Cd5RJIdNr4GXgBcOeo6JKlV4+jj3xU4P8nG7X+iqv5zDHVIUpNG\nHvxV9SPgz0e9XUnSgMM5JakxBr8kNcbgl6TG+CAWSRPPh73cly1+SWqMwS9JjTH4JakxBr8kNcbg\nl6TGGPyS1BiDX5Ia4zh+SZph0sf92+KXpMYY/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxjuOX\npAdoqY37t8UvSY0x+CWpMQa/JDXG4Jekxhj8ktQYg1+SGmPwS1JjDH5JaowXcEnSGIzzoi9b/JLU\nGINfkhpj8EtSYwx+SWrMWII/ycFJrkvygyQnjKMGSWrVyIM/yTbAKcAhwHJgVZLlo65Dklo1jhb/\nAcAPqupHVXUX8Eng8DHUIUlNSlWNdoPJS4GDq+rV3ftXAH9ZVcfOWG41sLp7uy9w3RYsY2fg1i24\nvqWgxX2GNve7xX2GNvd7U/v8+Kqamjlxq72Aq6rWAGv6WHeSS6pqRR/r3lq1uM/Q5n63uM/Q5n4v\ndp/H0dVzM7Dn0PvHddMkSSMwjuD/H2CfJHsleTDwMuCCMdQhSU0aeVdPVd2d5FjgS8A2wOlVddWI\ny+ilC2kr1+I+Q5v73eI+Q5v7vah9HvnJXUnSeHnlriQ1xuCXpMY0F/wt3i4iydokVyS5PMkl466n\nL0lOT7IhyZVD03ZKcmGSG7rfO46zxi1tjn0+McnN3fG+PMmh46xxS0uyZ5KLklyd5Kokr++mT+yx\nnmefF3Wsm+rj724XcT1wEHATgxFGq6rq6rEW1rMka4EVVTXRF7ckeRZwJ3BWVf1ZN+09wG1VdVL3\nH/2OVfXmcda5Jc2xzycCd1bV+8ZZW1+S7AbsVlWXJdkBuBR4EfBKJvRYz7PPR7KIY91ai9/bRUyw\nqvoGcNuMyYcDZ3avz2Twj2VizLHPE62q1lXVZd3rO4BrgD2Y4GM9zz4vSmvBvwfw06H3N/EA/nhL\nSAFfTnJpdyuMluxaVeu617cAu46zmBE6Nsn3u66gienymCnJMmB/4Ls0cqxn7DMs4li3FvytemZV\nPZXBHVFf23UPNKcG/Zot9G2eCuwN7AesA04ebzn9SLI98CnguKq6fXjepB7rWfZ5Uce6teBv8nYR\nVXVz93sDcD6DLq9WrO/6Rzf2k24Ycz29q6r1VXVPVd0LfIQJPN5JtmMQgGdX1Xnd5Ik+1rPt82KP\ndWvB39ztIpI8ojsZRJJHAC8Arpz/UxPlAuDo7vXRwGfGWMtIbAy/zhFM2PFOEuA04Jqqev/QrIk9\n1nPt82KPdVOjegC64U4f5I+3i3jnmEvqVZInMGjlw+AWHZ+Y1H1Ocg6wksGtatcDbwc+DZwLTAM3\nAkdW1cScDJ1jn1cy+OpfwFrgNUN930tekmcC3wSuAO7tJr+VQZ/3RB7refZ5FYs41s0FvyS1rrWu\nHklqnsEvSY0x+CWpMQa/JDXG4Jekxhj80pAkd27m8iuTfK6veqQ+GPyS1BiDX5pF15L/WpL/SHJt\nkrO7qyc3PtPh2iSXAS8e+swjuhtlXZzke0kO76a/Icnp3eunJLkyycPHsmMSBr80n/2B44DlwBOA\nZyR5KIN7ohwG/AXw2KHl/wH4alUdADwHeG93m4wPAU9McgTwUQZXV/56dLsh3ZfBL83t4qq6qbsB\n1uXAMuBPgB9X1Q3dHSA/PrT8C4ATklwOfA14KDDdff6VwMeAr1fVt0e3C9L9bTvuAqSt2O+GXt/D\npv+9BHhJVV03y7x9GDwpa/ctVJu0aLb4pc1zLbAsyd7d+1VD874EvG7oXMD+3e9HAR8GngU8JslL\nR1ivdD8Gv7QZquq3wGrg893J3eF7vr8D2A74fpKruvcAHwBOqarrgWOAk5LsMsKypfvw7pyS1Bhb\n/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNeb/AYh5UoFJrnFuAAAAAElFTkSuQmCC\n",
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAEWCAYAAABhffzLAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAATVklEQVR4nO3debAlZX3G8e+jYiyBIMuVDISbcSEm\nE41gJoilpbhGMQYBC50YHA3JYBUYSUglxGxEsxDjkqRCWWIxcVRAcUExatwVt6AwmSiLgMugTIaZ\nEjSAJgaGX/44TTxc7sZ1+px7z/v9VN2653T36f690zXPvPOet7tTVUiS2nGfcRcgSRotg1+SGmPw\nS1JjDH5JaozBL0mNMfglqTEGv9STJG9O8pfjrkOayeDXspKkkjx8xrIzk7xtOdTSwzGO6o7zh30e\nRxpm8EszJLnfCA+3HrgZeNF8G81W04jr1AQx+LWidD3kG5KcnmRnku1JXjK0/ugkVyW5Ncm2JL8/\ntO63k3wtyc1JLk5y0NC6SnJKkuuA65Jc0q36jyS3JXl+t92vJtmS5HtJPp/kF4f2cXiSzd2x3wE8\nYIG27Ak8DzgFODTJ2qF1q7uaTkryLeATsy3rtn1nkhuT/FeSS5L8Qrf8l5PsSHLfof0el+Q/7v2f\nvCaJwa+V6KeAfYCDgZOAs5Ps2607Fzi5qvYGHsmPwvEpwN8AJwCrgOuBt8/Y73OBxwJrquqJ3bJH\nV9VeVfWOJIcDG4GTgf2BNwIXJ/mJJPcH3gu8FdgPeCdw/ALtOA64rdv2wwx6/zM9Cfh54FfmWfYh\n4FDgwcBm4DyAqvoScBPwjKHPngi8ZYG6NOEMfq1EtwOvrKrbq+qDDMLzEUPr1iT5yar6blVt7pa/\nENhYVZur6ofAHwGPS7J6aL9/U1U3V9V/z3HcDcAbq+rSqtpVVZuAHwJHdj97AH/f1fUu4EsLtGM9\n8I6q2gWcD7wgyR4ztjmzqr4/o6a7LauqjVV1a9euM4FHJ9mn23YT8BsASfZj8I/F+QvUpQln8Gu5\n2cUgQIftwSDQ73JTVd0x9P4HwF7d6+OBo4Hrk3w6yeO65Qcx6OUDUFW3MegNHzy0n28vUNvPAKd3\nwzzfS/I94JBu3wcB2+rudz28fradACQ5BHgyXe8ceB+DoaFnz9h0tpr+f1mS+yY5K8nXk9wCbO1W\nHdD9fhvwnG5Y6QTgM1W1fYF2asIZ/FpuvgWsnrHsIcwTosOq6ktVdQyDYY/3Ahd2q/6TQXAD/z++\nvj+wbfjjC+z+28BfVdWDhn4eWFUXANuBg5NkaPvpefZ1IoO/f+9PciPwDQbBP3O4Z7aahpf9OnAM\n8DQGw1+ru+UBqKptwBcYDCudyGAoSo0z+LXcvAP4kyQ/neQ+SZ4GPAd410IfTHL/JC9Msk9V3Q7c\nAtzZrb4AeEmSw5L8BPDXwKVVtXWeXe4AHjr0/k3AS5M8NgN7Jnl2kr0ZhOsdwO8k2SPJccAR8+x7\nPfAXwGFDP8cDRyfZf6G2DtmbwXDTTcADu3bN9BbgD4BHAe+5F/vWhDL4tdy8Evg88Fngu8CrgRdW\n1RWL/PyJwNZu2OOlDMb2qaqPAX8KvJtB7/xhwAsW2NeZwKZuWOeEqroM+G3gn7ravga8uNv//zLo\nVb+YwfTM5zNHyCY5ksH/Ps6uqhuHfi7u9rlukW2FQahfz+B/LlcB/zbLNhd1x7uoqn5wL/atCRUf\nxCJNviRfZzDb6WPjrkXjZ49fmnBJjmfwvcAnxl2Llgev/JMmWJJPAWuAE6vqzgU2VyMc6pGkxjjU\nI0mNWRFDPQcccECtXr163GVI0opy+eWXf6eqpmYuXxHBv3r1ai677LJxlyFJK0qSWS98dKhHkhpj\n8EtSYwx+SWqMwS9JjTH4JakxBr8kNaa34E9ySJJPds8/vTLJy7vlZ3bPQt3S/RzdVw2SpHvqcx7/\nHcDpVbW5u1/55Uk+2q17fVW9psdjS5Lm0Fvwd4932969vjXJ1dz9MXeSpDEYyZW73QOtDwcuBR4P\nnJrkRcBlDP5X8N1ZPrOBwcOtmZ6e7wl281t9xgcWtd3Ws2Y+6lSSJlPvX+4m2YvBU49Oq6pbgDcw\nePrRYQz+R/Da2T5XVedU1dqqWjs1dY9bTUiSlqjX4E+yB4PQP6+q3gNQVTuqald3b/A3Mf9zSSVJ\nu1mfs3oCnAtcXVWvG1q+amizY4HFPktVkrQb9DnG/3gGD77+SpIt3bJXAOuSHMbgUXBbgZN7rEGS\nNEOfs3o+C2SWVR/s65iSpIV55a4kNcbgl6TGrIgncI2S8/4lTTp7/JLUGINfkhpj8EtSYwx+SWqM\nwS9JjTH4JakxBr8kNcZ5/LuBc/8lrST2+CWpMQa/JDXG4Jekxhj8ktQYg1+SGmPwS1JjDH5JaozB\nL0mN8QKuMfCCL0njZI9fkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGOI9/BXDev6TdyR6/\nJDXG4Jekxhj8ktQYg1+SGtNb8Cc5JMknk1yV5MokL++W75fko0mu637v21cNkqR76rPHfwdwelWt\nAY4ETkmyBjgD+HhVHQp8vHsvSRqR3oK/qrZX1ebu9a3A1cDBwDHApm6zTcBz+6pBknRPI5nHn2Q1\ncDhwKXBgVW3vVt0IHDjHZzYAGwCmp6f7L3LCLGbuv/P+pTb1/uVukr2AdwOnVdUtw+uqqoCa7XNV\ndU5Vra2qtVNTU32XKUnN6DX4k+zBIPTPq6r3dIt3JFnVrV8F7OyzBknS3fU5qyfAucDVVfW6oVUX\nA+u71+uB9/VVgyTpnvoc4388cCLwlSRbumWvAM4CLkxyEnA9cEKPNUiSZugt+Kvqs0DmWP3Uvo4r\nSZqfV+5KUmMMfklqjPfjF+A9/6WW2OOXpMYY/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8k\nNcYLuLQkXvAlrVz2+CWpMQa/JDXG4Jekxhj8ktQYg1+SGmPwS1JjDH5Jaozz+DUSzvuXlg97/JLU\nGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcZ5/Fq2FjP333n/0r1nj1+SGmPwS1JjDH5JaozB\nL0mN6S34k2xMsjPJFUPLzkyyLcmW7ufovo4vSZpdnz3+NwPPnGX566vqsO7ngz0eX5I0i96Cv6ou\nAW7ua/+SpKUZxxj/qUm+3A0F7TuG40tS00Z9AdcbgFcB1f1+LfCbs22YZAOwAWB6enpU9WkF82Ev\n0uKMtMdfVTuqaldV3Qm8CThinm3Pqaq1VbV2ampqdEVK0oQbafAnWTX09ljgirm2lST1o7ehniQX\nAEcBByS5Afhz4KgkhzEY6tkKnNzX8SVJs1sw+JMcCPw1cFBVPSvJGuBxVXXufJ+rqnWzLJ73M5Kk\n/i1mqOfNwIeBg7r31wKn9VWQJKlfiwn+A6rqQuBOgKq6A9jVa1WSpN4sJvi/n2R/BuPyJDkS+K9e\nq5Ik9WYxX+7+HnAx8LAknwOmgOf1WpU0As77V6sWDP6q2pzkScAjgADXVNXtvVcmSerFYmb1vGjG\nosckoare0lNNkqQeLWao55eHXj8AeCqwGTD4JWkFWsxQz8uG3yd5EPD23iqSJPVqKbds+D7wkN1d\niCRpNBYzxv9+uqmcDP6hWANc2GdRkqT+LGaM/zVDr+8Arq+qG3qqR5LUs8WM8X96FIVIy53z/jUp\n5gz+JLfyoyGeu60Cqqp+sreqJEm9mTP4q2rvURYiSRqNRd+PP8mDGczjB6CqvtVLRZKkXi04nTPJ\nryW5Dvgm8GkGD1D5UM91SZJ6sph5/K8CjgSuraqHMLhy9996rUqS1JvFBP/tVXUTcJ8k96mqTwJr\ne65LktSTxYzxfy/JXsBngPOS7GRw9a4kaQWabzrn2cAFwDHAfzN43OILgX2AV46kOmmFc+6/lqP5\nevzXAn8HrGJwi4YLqmrTSKqSJPVmzjH+qvqHqnoc8CTgJmBjkq8m+bMkPzuyCiVJu9WCX+5W1fVV\n9bdVdTiwDjgWuLr3yiRJvVjMPP77JXlOkvMYzN+/Bjiu98okSb2Y78vdpzPo4R8NfJHBw1c2VJUz\neiRpBZvvy90/As4HTq+q746oHklSz+a7SdtTRlmIJGk0lvLoRUnSCrbou3NK6p8XfGkU7PFLUmMM\nfklqjMEvSY0x+CWpMb0Ff5KNSXYmuWJo2X5JPprkuu73vn0dX5I0uz57/G8Gnjlj2RnAx6vqUODj\n3XtJ0gj1FvxVdQlw84zFxwB33dp5E/Dcvo4vSZrdqOfxH1hV27vXNwIHzrVhkg3ABoDp6ekRlCat\nPM7711KM7cvdqiqg5ll/TlWtraq1U1NTI6xMkibbqIN/R5JVAN3vnSM+viQ1b9TBfzGwvnu9Hnjf\niI8vSc3rczrnBcAXgEckuSHJScBZwNOTXAc8rXsvSRqh3r7crap1c6x6al/HlCQtzCt3JakxBr8k\nNcb78UuNWczcf+f9TzZ7/JLUGINfkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGeAGXpHn5\nsJfJY49fkhpj8EtSYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGOI9f0m7lvP/lzx6/JDXG4Jekxhj8\nktQYg1+SGmPwS1JjDH5JaozBL0mNcR6/pLFy3v/o2eOXpMYY/JLUGINfkhpj8EtSY8by5W6SrcCt\nwC7gjqpaO446JKlF45zV8+Sq+s4Yjy9JTXKoR5IaM64efwEfSVLAG6vqnJkbJNkAbACYnp4ecXmS\nlrPFzP133v/cxtXjf0JVPQZ4FnBKkifO3KCqzqmqtVW1dmpqavQVStKEGkvwV9W27vdO4CLgiHHU\nIUktGnnwJ9kzyd53vQaeAVwx6jokqVXjGOM/ELgoyV3HP7+q/nUMdUhSk0Ye/FX1DeDRoz6uJGnA\n6ZyS1BiDX5IaY/BLUmN8EIukiefDXu7OHr8kNcbgl6TGGPyS1BiDX5IaY/BLUmMMfklqjMEvSY1x\nHr8kzTDp8/7t8UtSYwx+SWqMwS9JjTH4JakxBr8kNcbgl6TGGPyS1Bjn8UvSj2mlzfu3xy9JjTH4\nJakxBr8kNcbgl6TGGPyS1BiDX5IaY/BLUmMMfklqjBdwSdIYjPOiL3v8ktQYg1+SGmPwS1JjDH5J\nasxYgj/JM5Nck+RrSc4YRw2S1KqRB3+S+wJnA88C1gDrkqwZdR2S1Kpx9PiPAL5WVd+oqv8F3g4c\nM4Y6JKlJqarRHjB5HvDMqvqt7v2JwGOr6tQZ220ANnRvHwFcsxvLOAD4zm7c30rQYpuhzXa32GZo\ns90Ltflnqmpq5sJlewFXVZ0DnNPHvpNcVlVr+9j3ctVim6HNdrfYZmiz3Utt8ziGerYBhwy9/+lu\nmSRpBMYR/F8CDk3ykCT3B14AXDyGOiSpSSMf6qmqO5KcCnwYuC+wsaquHHEZvQwhLXMtthnabHeL\nbYY2272kNo/8y11J0nh55a4kNcbgl6TGNBf8Ld4uIsnWJF9JsiXJZeOupy9JNibZmeSKoWX7Jflo\nkuu63/uOs8bdbY42n5lkW3e+tyQ5epw17m5JDknyySRXJbkyycu75RN7rudp85LOdVNj/N3tIq4F\nng7cwGCG0bqqumqshfUsyVZgbVVN9MUtSZ4I3Aa8paoe2S17NXBzVZ3V/UO/b1X94Tjr3J3maPOZ\nwG1V9Zpx1taXJKuAVVW1OcnewOXAc4EXM6Hnep42n8ASznVrPX5vFzHBquoS4OYZi48BNnWvNzH4\nyzIx5mjzRKuq7VW1uXt9K3A1cDATfK7nafOStBb8BwPfHnp/Az/GH94KUsBHklze3QqjJQdW1fbu\n9Y3AgeMsZoROTfLlbihoYoY8ZkqyGjgcuJRGzvWMNsMSznVrwd+qJ1TVYxjcEfWUbnigOTUY12xh\nbPMNwMOAw4DtwGvHW04/kuwFvBs4rapuGV43qed6ljYv6Vy3FvxN3i6iqrZ1v3cCFzEY8mrFjm58\n9K5x0p1jrqd3VbWjqnZV1Z3Am5jA851kDwYBeF5VvadbPNHnerY2L/Vctxb8zd0uIsme3ZdBJNkT\neAZwxfyfmigXA+u71+uB942xlpG4K/w6xzJh5ztJgHOBq6vqdUOrJvZcz9XmpZ7rpmb1AHTTnf6e\nH90u4q/GXFKvkjyUQS8fBrfoOH9S25zkAuAoBreq3QH8OfBe4EJgGrgeOKGqJubL0DnafBSD//oX\nsBU4eWjse8VL8gTgM8BXgDu7xa9gMOY9ked6njavYwnnurngl6TWtTbUI0nNM/glqTEGvyQ1xuCX\npMYY/JLUGINfGpLktnu5/VFJ/qWveqQ+GPyS1BiDX5pF15P/VJJ3JflqkvO6qyfveqbDV5NsBo4b\n+sye3Y2yvpjk35Mc0y3/3SQbu9ePSnJFkgeOpWESBr80n8OB04A1wEOBxyd5AIN7ojwH+CXgp4a2\n/2PgE1V1BPBk4O+622T8A/DwJMcC/8zg6sofjK4Z0t0Z/NLcvlhVN3Q3wNoCrAZ+DvhmVV3X3QHy\nbUPbPwM4I8kW4FPAA4Dp7vMvBt4KfLqqPje6Jkj3dL9xFyAtYz8cer2Lhf++BDi+qq6ZZd2hDJ6U\nddBuqk1aMnv80r3zVWB1kod179cNrfsw8LKh7wIO737vA/wj8ERg/yTPG2G90j0Y/NK9UFX/A2wA\nPtB9uTt8z/dXAXsAX05yZfce4PXA2VV1LXAScFaSB4+wbOluvDunJDXGHr8kNcbgl6TGGPyS1BiD\nX5IaY/BLUmMMfklqjMEvSY35PwWulO/5kNmHAAAAAElFTkSuQmCC\n",
             "text/plain": [
               "<Figure size 432x288 with 1 Axes>"
             ]
