--- a/HeapSort.ipynb
+++ b/HeapSort.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "HeapSort.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM22Dsl/ePijUIGmTeGa6DZ",
+      "authorship_tag": "ABX9TyMxAFXu5K+Sa3LJ6w/KPfYO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,6 +100,30 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ZrOipum7wyBh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def isMaxHeap(a):\n",
+        "  N = len(a)\n",
+        "  for i in range(0,int((N-2)/2)):\n",
+        "    \n",
+        "    parent = a[i]\n",
+        "    left = a[2*i+1]\n",
+        "    right = a[2*i+2]\n",
+        "    print(f'parent {parent} left {left} right {right}')\n",
+        "    if(2*i+1<N and parent<left): return False\n",
+        "    if(2*i+2<N and parent<right): return False\n",
+        "  return True  \n",
+        "    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "qYuX5XgqGnQP",
         "colab_type": "code",
         "colab": {}
@@ -117,20 +141,59 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "sf4-dqZczYSf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "a1820c8f-fb12-4ff5-b4d7-cfd90dca0b5a"
+      },
+      "source": [
+        "a = np.array([30,29,28,54,45,78,96,100,120,130,90,70,71,17,19,31,65,31])\n",
+        "isMaxHeap(a)"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "parent 30 left 29 right 28\n",
+            "parent 29 left 54 right 45\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 149
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "4zq2xCxgG7A7",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "c972c35a-d30b-4dbf-c9a6-9a53b2627d25"
+        "outputId": "6543ad82-9c6c-49e1-d792-3f3241195aaa"
       },
       "source": [
-        "a = np.array([30,29,28,54,45,78,96,100,120,130,90,70,71,17,19,31,65,31])\n",
+        "\n",
         "heapify(a)\n",
         "a"
       ],
-      "execution_count": 128,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -143,7 +206,51 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 128
+          "execution_count": 150
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ggXGANI_yM7g",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        },
+        "outputId": "e60197a4-99f1-442c-e42e-8921e695528f"
+      },
+      "source": [
+        "isMaxHeap(a)"
+      ],
+      "execution_count": 151,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "parent 130 left 120 right 96\n",
+            "parent 120 left 100 right 90\n",
+            "parent 96 left 78 right 28\n",
+            "parent 100 left 65 right 54\n",
+            "parent 90 left 45 right 29\n",
+            "parent 78 left 70 right 71\n",
+            "parent 28 left 17 right 19\n",
+            "parent 65 left 31 right 30\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 151
         }
       ]
     },
